# api-bancaria-fastapi

./: README.md  bank.db  pyproject.toml
alembic/: env.py
alembic/versions/: 329a768dde2b_initial_migration.py  741005f0acd1_verificar_mudanças.py  82b259ad7ad1_alterações_em_transaction.py
app/: main.py
app/core/: config.py  security.py
app/domain/: models.py  schemas.py
app/infra/: database.py
app/routers/: account_router.py  auth.py  auth_router.py  statement.py  statement_router.py  transaction_router.py
app/use_cases/: get_statement.py
tests/: conftest.py  test_account.py  test_auth.py  test_statement.py
